<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ENUM_Axis" Id="{8efed013-afad-4b94-9921-5b44414d6631}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE ENUM_Axis :

(
	Init := 0,
	PowerOFF,//Power off
	Error,
	Reset,
	PowerON,
	Stop,
	Halt,
	Ready,//Wait for command
	Homing,
	SetPosition,
	JogPos,
	JogNeg,
	MoveAbsolute,
	MoveRelative,
	MoveVelocity,
	MoveTorque
);	
	
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>